k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"backend:1.0.0"},"fieldPath":"spec.template.spec.containers[?(@.name==\"backend\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
  name: backend
  namespace: rhsso-openshift-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: backend
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: rhsso-config
        image: quay.io/rfelix/rhsso-ocp-demo-backend@sha256:262110960b1796471aa7daa2d2d1b6a1c507cf825ba093d302169f34ce63ecbc
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /public
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
