k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
  name: frontend
spec:
  ports:
  - name: 80-tcp
    port: 80
  selector:
    deployment: frontend
