k8s/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
  name: frontend
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
